; ModuleID = '/home/carl/AnghaBench/linux/tools/testing/selftests/memfd/extr_fuse_test.c_mfd_busy_add_seals.c'
source_filename = "/home/carl/AnghaBench/linux/tools/testing/selftests/memfd/extr_fuse_test.c_mfd_busy_add_seals.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@F_GET_SEALS = common dso_local global i32 0, align 4
@F_ADD_SEALS = common dso_local global i32 0, align 4
@errno = common dso_local global i64 0, align 8
@EBUSY = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [68 x i8] c"ADD_SEALS(%d, %llu -> %llu) didn't fail as expected with EBUSY: %m\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i64)* @mfd_busy_add_seals to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mfd_busy_add_seals(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i64 %1, i64* %4, align 8
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @F_GET_SEALS, align 4
  %9 = call i64 (i32, i32, ...) @fcntl(i32 %7, i32 %8)
  store i64 %9, i64* %5, align 8
  %10 = load i64, i64* %5, align 8
  %11 = icmp slt i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  store i64 0, i64* %6, align 8
  br label %15

13:                                               ; preds = %2
  %14 = load i64, i64* %5, align 8
  store i64 %14, i64* %6, align 8
  br label %15

15:                                               ; preds = %13, %12
  %16 = load i32, i32* %3, align 4
  %17 = load i32, i32* @F_ADD_SEALS, align 4
  %18 = load i64, i64* %4, align 8
  %19 = call i64 (i32, i32, ...) @fcntl(i32 %16, i32 %17, i64 %18)
  store i64 %19, i64* %5, align 8
  %20 = load i64, i64* %5, align 8
  %21 = icmp slt i64 %20, 0
  br i1 %21, label %22, label %32

22:                                               ; preds = %15
  %23 = load i64, i64* @errno, align 8
  %24 = load i64, i64* @EBUSY, align 8
  %25 = icmp ne i64 %23, %24
  br i1 %25, label %26, label %32

26:                                               ; preds = %22
  %27 = load i32, i32* %3, align 4
  %28 = load i64, i64* %6, align 8
  %29 = load i64, i64* %4, align 8
  %30 = call i32 @printf(i8* getelementptr inbounds ([68 x i8], [68 x i8]* @.str, i64 0, i64 0), i32 %27, i64 %28, i64 %29)
  %31 = call i32 (...) @abort() #3
  unreachable

32:                                               ; preds = %22, %15
  %33 = load i64, i64* %5, align 8
  %34 = trunc i64 %33 to i32
  ret i32 %34
}

declare dso_local i64 @fcntl(i32, i32, ...) #1

declare dso_local i32 @printf(i8*, i32, i64, i64) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
